--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "autoprefixer": "^10.4.15",
     "axios": "^1.4.0",
     "decco": "^1.6.0",
+    "highlight.js": "11.8.0",
     "msw": "^1.2.3",
     "postcss": "^8.4.28",
     "react": "^18.2.0",
