--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "type": "module",
   "private": true,
+  "homepage": "/colisweb-rescript-api-parse/",
   "dependencies": {
     "@rescript/react": "^0.11.0",
     "autoprefixer": "^10.4.15",
